# cosmic-ext-extra-sessions

./: .gitmodules  HowThisWorks.md  README.md  justfile
miracle/: README.md  cosmic-ext-miracle.desktop  start-cosmic-ext-miracle
niri/: README.md  cosmic-ext-niri.desktop
sway/: README.md  config-cosmic  cosmic-ext-sway.desktop  start-cosmic-ext-sway
sway/cosmic-ext-sway-daemon/: Cargo.toml  README.md  justfile
sway/cosmic-ext-sway-daemon/src/: main.rs
